syntax = "proto3";
package chain4energy.c4echain.cfedistributor;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfedistributor/types";

message State {
  Account account = 1         [(gogoproto.nullable) = true];
  bool burn = 2;
  repeated cosmos.base.v1beta1.DecCoin coins_states = 3 [
  (gogoproto.moretags) = "yaml:\"coin_state\"",
  (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
  (gogoproto.nullable) = false];
}


message SubDistributor {
  string name = 1;
  repeated Account sources = 2;
  Destination destination = 3         [(gogoproto.nullable) = false];

}

message Destination {
  Account account = 1         [(gogoproto.nullable) = false];
  repeated Share share = 2         [(gogoproto.nullable) = true];
  BurnShare burn_share = 3         [(gogoproto.nullable) = true];
}

message BurnShare {
//  float percent =1;
  string percent                = 1 [
    (gogoproto.moretags)   = "yaml:\"percent\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

}

message Share {
  string name = 1;
//  float percent = 2;
  string percent                = 2 [
    (gogoproto.moretags)   = "yaml:\"percent\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  Account account = 3          [(gogoproto.nullable) = false];
}

message Account {
  string id = 1;
  string type = 2;
}
